# opendgf

./: README.md
OGDAGGER/: Z.CFG  dagger.bat
OGDAGGER/ARENA2/: 40C00Y00.QRC  A0C00Y06.QBN  A0C01Y06.QBN  A0C01Y06.QRC  BIOG03T0.TXT  BIOG04T0.TXT  BIOG05T0.TXT  BIOG06T0.TXT  BIOG10T0.TXT  BIOG11T0.TXT  BODY00I0.IMG  BODY13I1.IMG  C0B00Y01.QBN  C0B00Y01.QRC  C0B3XY09.QBN  FACE12I0.CIF  FACTION.TXT  K0C00Y02.QBN  K0C00Y02.QRC  K0C00Y04.QBN  K0C00Y04.QRC  K0C00Y05.QBN  K0C00Y05.QRC  K0C01Y10.QRC  K0C30Y03.QBN  K0C30Y03.QRC  L0B00Y01.QRC  L0B30Y09.QRC  L0B40Y04.QRC  M0B00Y06.QRC  M0B00Y07.QRC  M0B00Y15.QBN  M0B30Y03.QBN  M0B30Y04.QBN  M0B30Y04.QRC  M0B30Y08.QRC  M0B40Y05.QRC  M0C00Y11.QBN  M0C00Y11.QRC  M0C00Y12.QBN  (+51 more)
OGDAGGER/DAGGER/ARENA2/: 40C00Y00.QBN  A0C00Y06.QRC  A0C00Y12.QBN  A0C00Y12.QRC  A0C0XY04.QBN  A0C0XY04.QRC  A0C10Y05.QBN  BIOG00T0.TXT  BIOG01T0.TXT  BIOG02T0.TXT  BIOG07T0.TXT  BIOG08T0.TXT  BIOG09T0.TXT  BIOG12T0.TXT  BIOG13T0.TXT  BIOG14T0.TXT  BIOG15T0.TXT  BIOG16T0.TXT  BIOG17T0.TXT  BODY00I1.IMG  C0B00Y02.QBN  C0B00Y02.QRC  C0B3XY09.QRC  C0C00Y10.QBN  C0C00Y10.QRC  FACES.CIF  K0C00Y06.QBN  K0C00Y06.QRC  L0B00Y00.QRC  L0B60Y10.QRC  M0B00Y06.QBN  M0B00Y07.QBN  M0B00Y15.QRC  M0B30Y03.QRC  M0B30Y08.QBN  M0B40Y05.QBN  M0B60Y10.QBN  M0B60Y10.QRC  M0C00Y13.QBN  M0C00Y14.QBN  (+56 more)
OGDAGGER/DAGGER/ARENA2/BOOKS/: BOK10000.TXT
OGDAGGER/DAGGER/DATA/: DAG_MODE.LST
OGDAGGER/DATA/: DAGGER.IMG  DAG_HUGE.LST  DAG_MEDI.LST  DAG_MINI.LST
psp/: CMakeLists.txt
